# Rag-chatbot-with-pinecone

./: README.md  YouTube AI Assistant.ipynb  main.py  pyproject.toml  rag_Project.ipynb  requirements.txt
